--- a/Notebooks/KNN_1.ipynb
+++ b/Notebooks/KNN_1.ipynb
@@ -23,11 +23,11 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "\n",
+        " \n",
         "import json\n",
         "import pickle"
       ],
-      "execution_count": 21,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -38,14 +38,14 @@
       "source": [
         "data = pd.read_csv('spotify3.csv')"
       ],
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "TThkWFSELxz0",
-        "outputId": "f917b5fa-4c29-4d28-e680-83e86e6ce235",
+        "outputId": "76f987dd-4938-4140-fc72-4f43e3a3e1bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 366
@@ -54,7 +54,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 3
         }
       ]
     },
@@ -212,7 +212,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jxp3FZlCL-n1",
-        "outputId": "43cc3366-3eb4-48fc-dcc9-2d169baf009e",
+        "outputId": "f65fe4f3-48b9-4282-e9be-5717694cc9b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 304
@@ -221,7 +221,7 @@
       "source": [
         "data.describe()"
       ],
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +410,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 4
         }
       ]
     },
@@ -418,7 +418,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RvcE6VuwMLXc",
-        "outputId": "6b4e63e3-d85a-4aa0-d0b5-178fb471c878",
+        "outputId": "fb4c3ea6-f047-4691-d258-9d41d5ba1d7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -431,7 +431,7 @@
         "train, test = train_test_split(data, test_size=0.2, random_state=42)\n",
         "train.head()"
       ],
-      "execution_count": 25,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,7 +581,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 5
         }
       ]
     },
@@ -589,7 +589,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "X83KTs5lv7AJ",
-        "outputId": "ff70e398-ec2e-40cb-802a-1db940d32a2c",
+        "outputId": "dcb32719-f523-40cd-b5e4-2d0b08a5a94c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -598,7 +598,7 @@
       "source": [
         "train.shape, test.shape\n"
       ],
-      "execution_count": 26,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,27 +610,20 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dcc7lHxUMqzy",
-        "outputId": "92d18b6b-7fde-4880-c3f3-67f6adc7c3ce",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
+        "id": "dcc7lHxUMqzy"
       },
       "source": [
         "from sklearn.neighbors import NearestNeighbors\n",
         "import pickle\n",
         "\n",
-        "track_id = '6KuQTIu1KoTTkLXKrwlLPV'\n",
-        "\n",
-        "    # fix for train, test data split\n",
+        "    # fix for pickle error\n",
         "NN = NearestNeighbors(n_neighbors=10, \n",
         "                          algorithm='kd_tree', \n",
         "                          metric='euclidean', \n",
@@ -638,27 +631,81 @@
         "                          n_jobs=-1\n",
         "    )\n",
         "\n",
-        "NN.fit(train[train.columns[0:12]])\n",
-        "\n",
-        "obs = train.index[train['id'] == track_id]\n",
-        "series = test.iloc[obs, 0:12].to_numpy()\n",
-        "\n",
-        "neighbors = NN.kneighbors(series)\n",
-        "\n",
-        "new_obs = neighbors[1][0][1:16]\n",
-        "print(new_obs)\n",
-        "print(list(data.loc[new_obs, 'id']))\n",
         "filename = 'test_1.sav'\n",
         "pickle.dump(NN, open(filename, 'wb'))\n",
-        "\n"
+        "model = pickle.load(open(filename, 'rb'))"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ogf1ZBC7JCCY"
+      },
+      "source": [
+        "# Base function using a knn model input and a track id\n",
+        "def KNN(model, track_id): \n",
+        "   model.fit(data[data.columns[0:12]])\n",
+        " \n",
+        "   obs = data.index[data['id'] == track_id]\n",
+        "   series = data.iloc[obs, 0:12].to_numpy()\n",
+        " \n",
+        "   neighbors = model.kneighbors(series)\n",
+        " \n",
+        "   new_obs = neighbors[1][0][1:16]\n",
+        "   print(new_obs)\n",
+        "   print(list(data.loc[new_obs, 'id']))"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "blzApaMcM0Il",
+        "outputId": "530a14b9-69d4-4089-b5c7-3c67fc4c65ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "source": [
+        "# pickled model and random track id\n",
+        "KNN(model, '6fLvsD8uWsCRow8PfOpMav')"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[123864 104406 105322 150553  83780   6914  68331 168893 103433]\n",
+            "['5arE0i12UB4WuGraBVcuXE', '0gXMYs6RDg5muWWoi2q3mb', '4XDBEoD6QFnzDY5oMmNVXN', '1rvbY7HXYsFXSlLqxphocK', '16x9viSmRS3PII71Pdeowc', '5CAaWuGhF4XvUm2liCkThA', '46MoFdSoufjnzJ2NWuhRA0', '3ASlnePYdvR9RPlQyTJipP', '6SUudbR4vTazN9Jb7QWQn5']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eY7cPrwzOsrn",
+        "outputId": "596c1b56-9e3d-4423-d9d5-bddeb8e2fdcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "source": [
+        "KNN(model, '50pwsTFVsJTYA7rPFGpAoP')"
       ],
       "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[ 95370 101289  33534 135191 123107  10122   9874  47435   9533]\n",
-            "['46q5BtHso0ECuTKeq70ZhW', '4DWiUj21xSWY8XN9sM79Tc', '1smFzg83FkqhEQEbvcKTu0', '5Fim1gaXBgsiFfsQAfQSDS', '6GS6uE1vDmtzxO8GztAR2O', '3JgW4RlNhqnBLPCpSm3N2C', '2IkFfCOWnN6UmWu6Di4TjA', '1nj3fP1BRNJWfWZOFZ56nu', '1Hm74cTxxu5f1pMZbWZ1Q3']\n"
+            "[  8707  34030  99249   8501  99259 136158  89010    885 127475]\n",
+            "['3HAAKjpHv1SmZ1yvdgg0of', '1ixhN5Ny7eU5oYJ8j4yPTu', '05YfjSrFdFFNkS4AJoQr7z', '2pZoaMCHtvNl8WUWBQNRkK', '06z0xKRgqATQvr82f1qQeA', '4KCccOna239pckiyWEBSCy', '1sAFd9paCfBdrSfKJyEn0V', '3zR1UrjOZ4xAcjnetjvAEr', '0zqc6NoBNqYq8n0TGjYyTC']\n"
           ],
           "name": "stdout"
         }
@@ -667,88 +714,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "blzApaMcM0Il",
-        "outputId": "371d33a9-53d2-464e-aa07-deb5debc4721",
+        "id": "JildjHk6PnDt",
+        "outputId": "5b426d57-5ad5-4764-8e08-5338ad93f2d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 185
+          "height": 286
         }
       },
       "source": [
-        "KNN('6fLvsD8uWsCRow8PfOpMav')"
+        "data.iloc[3889]"
       ],
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[ 20461 103546  63641  36525  47348   2159  98084 133570 130926]\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['6SkBQmkSPAjLZFrDEmM0fW',\n",
-              " '52m8IrzripYje6bVxUILQU',\n",
-              " '2EelxhcFWRyUo6DPySjvQk',\n",
-              " '6gVXJNHw1DBEaGEMJgTj1k',\n",
-              " '1SSj8VnmFs7jDDGUddEOoY',\n",
-              " '2OZBaElueR8UCp8bQZWII0',\n",
-              " '0otHsVKTN9bClr32r0caHD',\n",
-              " '3iiObSfkcBsETljmSB4Hcs',\n",
-              " '4EB7Ns81BoD0ARUVn56qq0']"
+              "acousticness                    0.00191767\n",
+              "danceability                      0.268219\n",
+              "duration_ms                      0.0262643\n",
+              "energy                                0.82\n",
+              "instrumentalness                    0.0265\n",
+              "key                               0.909091\n",
+              "liveness                             0.157\n",
+              "loudness                          0.828956\n",
+              "popularity                            0.35\n",
+              "speechiness                      0.0546956\n",
+              "tempo                             0.381944\n",
+              "valence                              0.479\n",
+              "year                              0.575758\n",
+              "artists                      ['Buzzcocks']\n",
+              "id                  7cZtsWVdq8Df9NXh8DDHKm\n",
+              "Name: 3889, dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 31
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pj3YCUMSPAdT"
+        "id": "9spAFEjeDmXv"
       },
       "source": [
-        "NN = NearestNeighbors(n_neighbors=10)\n",
-        "NN.fit(data[data.columns[0:12]])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eY7cPrwzOsrn"
-      },
-      "source": [
-        "KNN('50pwsTFVsJTYA7rPFGpAoP')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JildjHk6PnDt"
-      },
-      "source": [
-        "data.loc[150553]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KYid-kx1W-gF"
-      },
-      "source": [
-        "KNN('1rvbY7HXYsFXSlLqxphocK')"
+        ""
       ],
       "execution_count": null,
       "outputs": []
