--- a/Notebooks/Lyric_NLP__Model.ipynb
+++ b/Notebooks/Lyric_NLP__Model.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Lyric_NLP _Model.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -99,6 +100,73 @@
       "cell_type": "code",
       "metadata": {
         "id": "4vyKqDJ1Nw88"
+      },
+      "source": [
+        "for title in soup.findAll('title'):\n",
+        "  song_json[\"Title\"] = title.text.strip()"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gb-MI0ZJOlP1",
+        "outputId": "94657eea-2253-4a0c-8bc5-ef19669e6d54",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "song_json[\"Title\"]"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Bring\\xa0Me The Horizon – Teardrops Lyrics | Genius Lyrics'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VP3PxDQUOrH9"
+      },
+      "source": [
+        "for div in soup.findAll('div', attrs={'class': 'lyrics'}):\n",
+        "  song_json[\"Lyrics\"].append(div.text.strip().split(\"\\n\"));"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yQC5xWjnPKe-"
+      },
+      "source": [
+        "song_json[\"Lyrics\"]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iGkPyJGyPNee"
       },
       "source": [
         ""
