--- a/Notebooks/Lyric_NLP__Model.ipynb
+++ b/Notebooks/Lyric_NLP__Model.ipynb
@@ -155,18 +155,108 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yQC5xWjnPKe-"
+        "id": "yQC5xWjnPKe-",
+        "outputId": "3b9b823b-d0f3-4057-eee4-c6cf4b8b285e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 991
+        }
       },
       "source": [
         "song_json[\"Lyrics\"]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['[Intro]',\n",
+              "  'Teardrops',\n",
+              "  '',\n",
+              "  '[Verse 1]',\n",
+              "  'We hurt ourselves for fun',\n",
+              "  'Force-feed our fear until our hearts go numb',\n",
+              "  'Addicted to a lonely kind of love',\n",
+              "  'What I wanna know',\n",
+              "  '',\n",
+              "  '[Pre-Chorus]',\n",
+              "  'Is how we got this stressed out, paranoid',\n",
+              "  'Everything is going dark',\n",
+              "  'Nothing makes me sadder than my head',\n",
+              "  '',\n",
+              "  '[Chorus]',\n",
+              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
+              "  \"I can't keep my grip, I'm slipping away from me\",\n",
+              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
+              "  'The emptiness is heavier than you think',\n",
+              "  '',\n",
+              "  '[Verse 2]',\n",
+              "  \"I'm tripping on the edge\",\n",
+              "  \"High as a kite, I'm never coming down\",\n",
+              "  'And if you hear me, guess you know how it feels',\n",
+              "  'To be alone',\n",
+              "  '',\n",
+              "  '[Pre-Chorus]',\n",
+              "  \"So how'd we get this stressed out, paranoid?\",\n",
+              "  'Everything is going dark',\n",
+              "  'Nothing makes me sadder than my head',\n",
+              "  '',\n",
+              "  '[Chorus]',\n",
+              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
+              "  \"I can't keep my grip, I'm slipping away from me\",\n",
+              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
+              "  'The emptiness is heavier than you think',\n",
+              "  '',\n",
+              "  '[Bridge]',\n",
+              "  'Suicidal, violent tragic state of mind',\n",
+              "  \"Lost my halo, now I'm my own anti-christ\",\n",
+              "  'Suicidal, violent, tragic state of mind',\n",
+              "  \"Lost my halo, now I'm my own anti-christ\",\n",
+              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
+              "  \"I can't keep my grip, I'm slipping away from me\",\n",
+              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
+              "  'The emptiness is heavier than you think',\n",
+              "  '',\n",
+              "  '[Chorus]',\n",
+              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
+              "  \"I can't keep my grip, I'm slipping away from me\",\n",
+              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
+              "  'The emptiness is heavier than you think',\n",
+              "  '',\n",
+              "  '[Outro]',\n",
+              "  'Teardrops',\n",
+              "  'Teardrops',\n",
+              "  \"I'm running outta teardrops\",\n",
+              "  'The emptiness is heavier than you think']]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iGkPyJGyPNee"
+      },
+      "source": [
+        "with open(song_json[\"Title\"]+'.json','w') as outfile:\n",
+        "  json.dump(song_json, outfile, indent=4, ensure_ascii=False)\n",
+        "\n",
+        "with open(song_json[\"Title\"] + '.html', 'wb') as file:\n",
+        "  file.write(html)"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S_V9FwSYQpyy"
       },
       "source": [
         ""
