--- a/Notebooks/Lyric_NLP__Model.ipynb
+++ b/Notebooks/Lyric_NLP__Model.ipynb
@@ -14,6 +14,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bufHzYepSEbu"
+      },
+      "source": [
+        "### Webscraper for title and song lyrics"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RZHuhpPLLWCG"
@@ -29,7 +38,7 @@
         "from bs4 import BeautifulSoup\n",
         "from urllib.request import Request, urlopen"
       ],
-      "execution_count": 2,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -42,14 +51,14 @@
         "ctx.check_hostname = False\n",
         "ctx.verify_mode = ssl.CERT_NONE"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "08xOBcq0MWXI",
-        "outputId": "66196e7f-db20-42e4-a801-812f8710eacf",
+        "outputId": "d64017ff-aa91-46ca-f293-6e011ff65502",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -58,12 +67,12 @@
       "source": [
         "url = input('song lyrics url')"
       ],
-      "execution_count": 3,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "song lyrics urlhttps://genius.com/Bring-me-the-horizon-teardrops-lyrics\n"
+            "song lyrics urlhttps://genius.com/Bring-me-the-horizon-drown-lyrics\n"
           ],
           "name": "stdout"
         }
@@ -78,7 +87,7 @@
         "req = Request(url,headers={'User-Agent': 'Mozilla/5.0'})\n",
         "webpage = urlopen(req).read()"
       ],
-      "execution_count": 5,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -90,10 +99,9 @@
         "soup = BeautifulSoup(webpage, 'html.parser')\n",
         "html = soup.prettify('utf-8')\n",
         "song_json = {}\n",
-        "song_json[\"Lyrics\"] = [];\n",
-        "song_json[\"Comments\"] = [];"
+        "song_json[\"Lyrics\"] = [];"
       ],
-      "execution_count": 6,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -105,14 +113,14 @@
         "for title in soup.findAll('title'):\n",
         "  song_json[\"Title\"] = title.text.strip()"
       ],
-      "execution_count": 8,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "gb-MI0ZJOlP1",
-        "outputId": "94657eea-2253-4a0c-8bc5-ef19669e6d54",
+        "outputId": "f31af173-520b-4b86-bfe2-84ac278861d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -121,7 +129,7 @@
       "source": [
         "song_json[\"Title\"]"
       ],
-      "execution_count": 9,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,13 +138,13 @@
               "type": "string"
             },
             "text/plain": [
-              "'Bring\\xa0Me The Horizon – Teardrops Lyrics | Genius Lyrics'"
+              "'Bring\\xa0Me The Horizon – Drown Lyrics | Genius Lyrics'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 41
         }
       ]
     },
@@ -149,92 +157,81 @@
         "for div in soup.findAll('div', attrs={'class': 'lyrics'}):\n",
         "  song_json[\"Lyrics\"].append(div.text.strip().split(\"\\n\"));"
       ],
-      "execution_count": 10,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yQC5xWjnPKe-",
-        "outputId": "3b9b823b-d0f3-4057-eee4-c6cf4b8b285e",
+        "outputId": "ccee66c4-c6e3-498e-bca5-2fc1a4e24d72",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 991
+          "height": 806
         }
       },
       "source": [
         "song_json[\"Lyrics\"]"
       ],
-      "execution_count": 14,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[['[Intro]',\n",
-              "  'Teardrops',\n",
-              "  '',\n",
-              "  '[Verse 1]',\n",
-              "  'We hurt ourselves for fun',\n",
-              "  'Force-feed our fear until our hearts go numb',\n",
-              "  'Addicted to a lonely kind of love',\n",
-              "  'What I wanna know',\n",
+              "[['[Verse 1]',\n",
+              "  \"What doesn't kill you makes you wish you were dead\",\n",
+              "  \"Got a hole in my soul growing deeper and deeper, and I can't take\",\n",
+              "  'One more moment of this silence, the loneliness is haunting me',\n",
+              "  \"And the weight of the world's getting harder to hold up\",\n",
               "  '',\n",
               "  '[Pre-Chorus]',\n",
-              "  'Is how we got this stressed out, paranoid',\n",
-              "  'Everything is going dark',\n",
-              "  'Nothing makes me sadder than my head',\n",
+              "  'It comes in waves, I close my eyes',\n",
+              "  'Hold my breath and let it bury me',\n",
+              "  \"I'm not okay and it's not alright\",\n",
+              "  \"Won't you drag the lake and bring me home again?\",\n",
               "  '',\n",
               "  '[Chorus]',\n",
-              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
-              "  \"I can't keep my grip, I'm slipping away from me\",\n",
-              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
-              "  'The emptiness is heavier than you think',\n",
+              "  \"Who will fix me now? Dive in when I'm down?\",\n",
+              "  \"Save me from myself, don't let me drown\",\n",
+              "  'Who will make me fight? Drag me out alive?',\n",
+              "  \"Save me from myself, don't let me drown\",\n",
               "  '',\n",
               "  '[Verse 2]',\n",
-              "  \"I'm tripping on the edge\",\n",
-              "  \"High as a kite, I'm never coming down\",\n",
-              "  'And if you hear me, guess you know how it feels',\n",
-              "  'To be alone',\n",
+              "  \"What doesn't destroy you, leaves you broken instead\",\n",
+              "  \"Got a hole in my soul growing deeper and deeper, and I can't take\",\n",
+              "  'One more moment of this silence, the loneliness is haunting me',\n",
+              "  \"And the weight of the world's getting harder to hold up\",\n",
               "  '',\n",
               "  '[Pre-Chorus]',\n",
-              "  \"So how'd we get this stressed out, paranoid?\",\n",
-              "  'Everything is going dark',\n",
-              "  'Nothing makes me sadder than my head',\n",
+              "  'It comes in waves, I close my eyes',\n",
+              "  'Hold my breath and let it bury me',\n",
+              "  \"I'm not okay and it's not alright\",\n",
+              "  \"Won't you drag the lake and bring me home again?\",\n",
               "  '',\n",
               "  '[Chorus]',\n",
-              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
-              "  \"I can't keep my grip, I'm slipping away from me\",\n",
-              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
-              "  'The emptiness is heavier than you think',\n",
+              "  \"Who will fix me now? Dive in when I'm down?\",\n",
+              "  \"Save me from myself, don't let me drown\",\n",
+              "  'Who will make me fight? Drag me out alive?',\n",
+              "  \"Save me from myself, don't let me drown\",\n",
               "  '',\n",
               "  '[Bridge]',\n",
-              "  'Suicidal, violent tragic state of mind',\n",
-              "  \"Lost my halo, now I'm my own anti-christ\",\n",
-              "  'Suicidal, violent, tragic state of mind',\n",
-              "  \"Lost my halo, now I'm my own anti-christ\",\n",
-              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
-              "  \"I can't keep my grip, I'm slipping away from me\",\n",
-              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
-              "  'The emptiness is heavier than you think',\n",
-              "  '',\n",
-              "  '[Chorus]',\n",
-              "  \"I'm running outta teardrops, let it hurt till it stops\",\n",
-              "  \"I can't keep my grip, I'm slipping away from me\",\n",
-              "  \"Oh, God, everything is so fucked, but I can't feel a thing\",\n",
-              "  'The emptiness is heavier than you think',\n",
+              "  \"'Cause you know that I can't do this on my own\",\n",
+              "  \"'Cause you know that I can't do this on my own\",\n",
+              "  \"'Cause you know that I can't do this on my own\",\n",
+              "  \"('Cause you know that I can't do this on my)\",\n",
               "  '',\n",
               "  '[Outro]',\n",
-              "  'Teardrops',\n",
-              "  'Teardrops',\n",
-              "  \"I'm running outta teardrops\",\n",
-              "  'The emptiness is heavier than you think']]"
+              "  'Who will fix me now?',\n",
+              "  'Who will fix me now?',\n",
+              "  \"Who will fix me now? Dive in when I'm down?\",\n",
+              "  \"Save me from myself, don't let me drown\"]]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 43
         }
       ]
     },
@@ -245,18 +242,139 @@
       },
       "source": [
         "with open(song_json[\"Title\"]+'.json','w') as outfile:\n",
-        "  json.dump(song_json, outfile, indent=4, ensure_ascii=False)\n",
-        "\n",
-        "with open(song_json[\"Title\"] + '.html', 'wb') as file:\n",
-        "  file.write(html)"
+        "  json.dump(song_json, outfile, indent=4, ensure_ascii=False)"
       ],
-      "execution_count": 13,
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dbGaNADxSTMu"
+      },
+      "source": [
+        "Transforming title and lyrics into numpy arrays for dataframe creation."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9CkJzpcBS-or"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ],
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S_V9FwSYQpyy"
+        "id": "Ry9so-Z3TAcs",
+        "outputId": "01293ce0-e8d8-44cb-9f88-e58eedffc9ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(song_json[\"Lyrics\"])"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WsJXhuM9T53w"
+      },
+      "source": [
+        "df = pd.read_json(song_json[\"Title\"] + '.json', orient='records')"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7PHHWE0SUkqx",
+        "outputId": "9072dfe6-b3bd-45c8-c547-4c8f77102903",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 77
+        }
+      },
+      "source": [
+        "df"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Lyrics</th>\n",
+              "      <th>Title</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>[[Verse 1], What doesn't kill you makes you wi...</td>\n",
+              "      <td>Bring Me The Horizon – Drown Lyrics | Genius L...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                              Lyrics                                              Title\n",
+              "0  [[Verse 1], What doesn't kill you makes you wi...  Bring Me The Horizon – Drown Lyrics | Genius L..."
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xDfnnGXZZXa4"
       },
       "source": [
         ""
